--- a/frontend/src/Admin++/components/table/table.scss
+++ b/frontend/src/Admin++/components/table/table.scss
@@ -16,13 +16,13 @@
     padding: 5px;
     border-radius: 5px;
 
-    &.Approved {
+    &.InStock {
       color: green;
       background-color: rgba(0, 128, 0, 0.151);
     }
-    &.Pending {
-      color: goldenrod;
-      background-color: rgba(189, 189, 3, 0.103);
+    &.OutofStock {
+      color: rgb(238, 155, 155);
+      background-color: rgb(227, 210, 210);
     }
   }
 }
